hphp/hack/test/typecheck/typedef4.php.exp
File "typedef4.php", line 14, characters 18-18:
A is uninstantiable (Typing[4002])
File "typedef4.php", line 12, characters 7-7:
Declaration is here
